--- a/index.html
+++ b/index.html
@@ -16,39 +16,47 @@
     />
 
     <!-- Font end -->
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header section-->
 
-    <header>
-      <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
+    <header class="header-page">
+      <div class="container post-header">
+        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
 
-      <!-- Nav -->
+        <!-- Nav -->
 
-      <nav>
-        <ul class="nav-list list">
-          <li>
-            <a class="link current" href="./index.html">Студия</a>
+        <nav>
+          <ul class="nav-list list">
+            <li class="item">
+              <a class="link current" href="./index.html">Студия</a>
+            </li>
+            <li class="item">
+              <a class="link" href="./Portfolio.html">Портфолио</a>
+            </li>
+            <li class="item">
+              <a class="link" href="./index.html">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Contacts -->
+
+        <ul class="Contact-list list">
+          <li class="item">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a class="link" href="./Portfolio.html">Портфолио</a>
-          </li>
-          <li>
-            <a class="link" href="./index.html">Контакты</a>
-          </li>
+          <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-
-      <!-- Contacts -->
-
-      <ul class="Contact-list list">
-        <li>
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <!--Main section-->
@@ -57,132 +65,161 @@
       <!--Hero saction-->
 
       <section class="hero">
-        <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn main-btn" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!--Feature section-->
 
-      <section>
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="feature-list list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="description">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="description">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="description">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="description">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="feature">
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="feature-list list">
+            <li class="feature-item">
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="description">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="title">Пунктуальность</h3>
+              <p class="description">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="title">Планирование</h3>
+              <p class="description">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="feature-item">
+              <h3 class="title">Современные технологии</h3>
+              <p class="description">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Work section-->
 
-      <section>
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/what_are_we_doing/box_1.jpg"
-              alt="Руки печатают на клавиатуре"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/what_are_we_doing/box_2.jpg"
-              alt="Работа на мобильном телефоне и ноутбуке"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/what_are_we_doing/box_3.jpg"
-              alt="Графический планшет"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="work">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="work-list list">
+            <li class="work-item">
+              <img
+                src="./images/what_are_we_doing/box_1.jpg"
+                alt="Руки печатают на клавиатуре"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/what_are_we_doing/box_2.jpg"
+                alt="Работа на мобильном телефоне и ноутбуке"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/what_are_we_doing/box_3.jpg"
+                alt="Графический планшет"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--team section-->
 
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="name-list list">
-          <li class="name-item">
-            <img
-              src="./images/our_team/img_1.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="name-title">Игорь Демьяненко</h3>
-            <p class="job-title" lang="en">Product Designer</p>
-          </li>
-          <li class="name-item">
-            <img src="./images/our_team/img_2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3 class="name-title">Ольга Репина</h3>
-            <p class="job-title" lang="en">Frontend Developer</p>
-          </li>
-          <li class="name-item">
-            <img src="./images/our_team/img_3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3 class="name-title">Николай Тарасов</h3>
-            <p class="job-title" lang="en">Marketing</p>
-          </li>
-          <li class="name-item">
-            <img src="./images/our_team/img_4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3 class="name-title">Михаил Ермаков</h3>
-            <p class="job-title" lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="name-list list">
+            <li class="name-item">
+              <img
+                class="team-img"
+                src="./images/our_team/img_1.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="name-title">Игорь Демьяненко</h3>
+              <p class="job-title" lang="en">Product Designer</p>
+            </li>
+            <li class="name-item">
+              <img
+                class="team-img"
+                src="./images/our_team/img_2.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <h3 class="name-title">Ольга Репина</h3>
+              <p class="job-title" lang="en">Frontend Developer</p>
+            </li>
+            <li class="name-item">
+              <img
+                class="team-img"
+                src="./images/our_team/img_3.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="name-title">Николай Тарасов</h3>
+              <p class="job-title" lang="en">Marketing</p>
+            </li>
+            <li class="name-item">
+              <img
+                class="team-img"
+                src="./images/our_team/img_4.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="name-title">Михаил Ермаков</h3>
+              <p class="job-title" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Footer section-->
 
     <footer class="footer">
-      <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
-      <address>
-        <ul class="contacts list">
-          <li class="adress-list">
-            <a
-              class="adress-link link"
-              href="https://goo.gl/maps/LunPuHm1MXrGtRLn7"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li>
-            <a class="contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+        <address>
+          <ul class="contacts list">
+            <li class="adress-list item">
+              <a
+                class="adress-link link"
+                href="https://goo.gl/maps/LunPuHm1MXrGtRLn7"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="item">
+              <a class="contact-link link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="item">
+              <a class="contact-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
