--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
         <address>
           <ul class="contacts list">
-            <li class="adress-list item">
+            <li class="adress item">
               <a
                 class="adress-link link"
                 href="https://goo.gl/maps/LunPuHm1MXrGtRLn7"
