дз 3 с внесенными правками

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,20 +26,20 @@
     <!-- Header -->
 
     <header class="header-page">
-      <div class="container post-header">
+      <div class="container header-container">
         <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
 
         <!-- Nav -->
 
-        <nav>
+        <nav class="header-nav">
           <ul class="nav-list list">
-            <li class="item">
+            <li class="nav-item">
               <a class="link" href="./index.html">Студия</a>
             </li>
-            <li class="item">
+            <li class="nav-item">
               <a class="link current" href="./Portfolio.html">Портфолио</a>
             </li>
-            <li class="item">
+            <li class="nav-item">
               <a class="link" href="./index.html">Контакты</a>
             </li>
           </ul>
@@ -47,8 +47,8 @@
 
         <!-- Contacts -->
 
-        <ul class="Contact-list list">
-          <li class="item">
+        <ul class="contact-list list">
+          <li class="item contact-mail">
             <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
@@ -83,77 +83,92 @@
           </ul>
 
           <!-- Projects -->
-          <div>
-            <ul class="project-list list">
-              <li class="project">
-                <a class="link" href="">
-                  <img
-                    src="./images/gallery/img-1.jpg"
-                    alt="Открытый сайт на ноутбуке"
-                    width="370"
-                  />
-                  <h2 class="title">Технокряк</h2>
+
+          <ul class="project-list list">
+            <li class="project">
+              <a class="img-link link" href="">
+                <img src="./images/gallery/img-1.jpg" alt="Открытый сайт на ноутбуке" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title">Технокряк</h2>
                   <p class="parceling">Веб-сайт</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href=""
-                  ><img src="./images/gallery/img-2.jpg" alt="Баскетбол" width="370" />
-                  <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href="">
+                <img src="./images/gallery/img-2.jpg" alt="Баскетбол" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
                   <p class="parceling">Дизайн</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href=""
-                  ><img src="./images/gallery/img-3.jpg" alt="Рыба" width="370" />
-                  <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href=""
+                ><img src="./images/gallery/img-3.jpg" alt="Рыба" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="parceling">Приложение</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href=""
-                  ><img src="./images/gallery/img-4.jpg" alt="Наушники" width="370" />
-                  <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href=""
+                ><img src="./images/gallery/img-4.jpg" alt="Наушники" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title">Проект <span lang="en">Prime</span></h2>
                   <p class="parceling">Маркетинг</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href=""
-                  ><img src="./images/gallery/img-5.jpg" alt="Коробки" width="370" />
-                  <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href=""
+                ><img src="./images/gallery/img-5.jpg" alt="Коробки" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="parceling">Приложение</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href="">
-                  <img src="./images/gallery/img-6.jpg" alt="Компьютер" width="370" />
-                  <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href="">
+                <img src="./images/gallery/img-6.jpg" alt="Компьютер" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title" lang="en">Inspiration has no Borders</h2>
                   <p class="parceling">Веб-сайт</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href=""
-                  ><img src="./images/gallery/img-7.jpg" alt="Журнал" width="370" />
-                  <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href=""
+                ><img src="./images/gallery/img-7.jpg" alt="Журнал" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="parceling">Дизайн</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href=""
-                  ><img src="./images/gallery/img-8.png" alt="Надпись" width="370" />
-                  <h2 class="title">Проект <span lang="en">LAB</span></h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href=""
+                ><img src="./images/gallery/img-8.png" alt="Надпись" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title">Проект <span lang="en">LAB</span></h2>
                   <p class="parceling">Маркетинг</p>
-                </a>
-              </li>
-              <li class="project">
-                <a class="link" href=""
-                  ><img src="./images/gallery/img-9.jpg" alt="работа на компьютере" width="370" />
-                  <h2 class="title" lang="en">Growing Business</h2>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a class="link" href=""
+                ><img src="./images/gallery/img-9.jpg" alt="работа на компьютере" width="370" />
+                <div class="project-subscription">
+                  <h2 class="project-title" lang="en">Growing Business</h2>
                   <p class="parceling">Приложение</p>
-                </a>
-              </li>
-            </ul>
-          </div>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -163,7 +178,7 @@
         <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
         <address>
           <ul class="contacts list">
-            <li class="adress-list item">
+            <li class="adress item">
               <a
                 class="adress-link link"
                 href="https://goo.gl/maps/LunPuHm1MXrGtRLn7"
